--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -58,6 +58,7 @@ jobs:
         # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
+          context: ./api_yamdb
           push: true
           # tags: ваш-логин-на-docker-hub/ваш-репозиторий-на-docker-hub:latest
           tags: avchasovskikh/yamdb:latest
