уменьш. верс. докеркомпоз

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,4 +1,4 @@
-# версия docker-compose
+# версия docker-compose 3.3 взамен 3.8
 version: '3.3'
 
 # имена и описания контейнеров, которые должны быть развёрнуты
