убрана пропись  версии nginx

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,11 +1,14 @@
 http {
-    # Скрыть вывед версии nginx
+    # Скрыть вывод версии nginx
     server_tokens off;
 }
 
 server {
     # Слушаем порт 80
     listen 80;
+    
+    # Скрыть вывод версии nginx
+    server_tokens off;
 
     # Список IP, запросы к которым должен обрабатывать nginx
     # В этом уроке проект разворачивается локально, поэтому nginx
