--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -90,8 +90,9 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
             sudo docker-compose exec web python manage.py migrate
-            sudo docker-compose exec web python manage.py collectstatic --no-input
-            sudo docker-compose exec web python manage.py loaddata fixtures.json
+
+            # sudo docker-compose exec web python manage.py collectstatic --no-input
+            # sudo docker-compose exec web python manage.py loaddata fixtures.json
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
