--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     # Слушаем порт 80
     listen 80;
+    server_tokens off;
     
     # Скрыть вывод версии nginx
     server_tokens off;
